<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/registerlogo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_logo"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/tEmailHint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/tPasswordHint"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"/>


    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/tConfirmPasswordHint"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm_password"
        android:layout_centerHorizontal="true"
        android:text="@string/tRegister"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorAccentYellow"/>

    <Button
        android:id="@+id/register_already_have_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:text="@string/tAlreadyHaveAnAccount"
        android:textAllCaps="false"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorAccentYellow"/>

    <ProgressBar
        android:id="@+id/register_progress"
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>